# src/routes/root.route.ts
@@ -1,12 +1,12 @@
 import express, { Router } from "express";
-import fileDownloadRoute from "./fileDownload.route";
-import getCandidateInfoRoute from "./getCandidateInfo.route";
+import urlDownloadRoute from "./urlDownload.route";
+import candidateRoute from "./candidate.route";
 import healthRoute from "./health.route";
 
 const router: Router = express.Router();
 
-router.use("/recruiter/download", fileDownloadRoute);
-router.use("/recruiter/getCandidateInfo", getCandidateInfoRoute);
+router.use("/download", urlDownloadRoute);
+router.use("/getCandidateInfo", candidateRoute);
 router.use("/health", healthRoute);
 
 export default router;
